<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.reddragon.adam.theclicker.MainMenuActivity"
    tools:showIn="@layout/activity_main_menu">

    <TextView
        android:id="@+id/textView"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/MenuGreeting"
        android:textAlignment="center"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="2"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/btnList1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:background="@android:drawable/checkbox_off_background"
            android:text="@string/btnList1" />

        <Button
            android:id="@+id/btnList2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:background="@android:drawable/checkbox_off_background"
            android:text="@string/btnList2" />


    </GridLayout>

</RelativeLayout>
