<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_dark_transparent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.reddragon.adam.theclicker.ListActivity2"
    tools:showIn="@layout/activity_list2">

    <EditText
        android:id="@+id/enListName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enListName2"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/enListName2"
        android:cursorVisible="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editText2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/alert_light_frame"
        android:text="@string/btn2"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn2"
        android:background="@android:drawable/screen_background_light" />
</RelativeLayout>
